--- a/store/src/default/shared/components/footer/footer.component.html
+++ b/store/src/default/shared/components/footer/footer.component.html
@@ -5,10 +5,10 @@
             <h3 class="col-title">USEFUL LINKS FOR CUSTOMER</h3>
             <div class="footer-menu-item"><a mat-button routerLink="/contactus">Contact us</a></div>
             <div class="footer-menu-item"><a mat-button routerLink="/faq">FAQs</a></div>
-            <div class="footer-menu-item"><a mat-button routerLink="/tAndC">T&C</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/term-and-condition">T&C</a></div>
             <div class="footer-menu-item"><a mat-button>Shiping</a></div>
-            <div class="footer-menu-item"><a mat-button routerLink="/faq">Returns</a></div>
-            <div class="footer-menu-item"><a mat-button routerLink="/privacy">Pricavy policy</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/Return">Returns</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/privacy-policy">Pricavy policy</a></div>
 
             <h3 class="col-title mt-3">JOIN OUR COMMUNITY</h3>
             <div class="footer-menu-item"><a mat-button>Blog</a></div>
@@ -24,10 +24,10 @@
             <h3 class="col-title">USEFUL LINKS FOR VENDOR</h3>
             <div class="footer-menu-item"><a mat-button routerLink="/contactus">Contact us</a></div>
             <div class="footer-menu-item"><a mat-button routerLink="/faq">FAQs</a></div>
-            <div class="footer-menu-item"><a mat-button routerLink="/tAndC">T&C</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/term-and-condition">T&C</a></div>
             <div class="footer-menu-item"><a mat-button>Shiping</a></div>
-            <div class="footer-menu-item"><a mat-button routerLink="/faq">Returns</a></div>
-            <div class="footer-menu-item"><a mat-button routerLink="/privacy">Pricavy policy</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/Return">Returns</a></div>
+            <div class="footer-menu-item"><a mat-button routerLink="/privacy-policy">Pricavy policy</a></div>
 
             <h3 class="mt-3 col-title">CORPORATE</h3>
             <div class="footer-menu-item"><a mat-button routerLink="/contactus">Contact us</a></div>
