--- a/store/src/default/pages/account/account.component.html
+++ b/store/src/default/pages/account/account.component.html
@@ -1,11 +1,15 @@
 <mat-sidenav-container>
-    <mat-sidenav #sidenav [opened]="sidenavOpen" [mode]="sidenavOpen ? 'side' : 'over'" class="account-sidenav" perfectScrollbar>
+    <mat-sidenav #sidenav [opened]="sidenavOpen" [mode]="sidenavOpen ? 'side' : 'over'" class="account-sidenav"
+        perfectScrollbar>
         <mat-nav-list class="mat-elevation-z1 h-100">
             <mat-list-item *ngFor="let link of links" (click)="doLogOut(link.name)">
                 <mat-icon matListIcon class="mat-icon-sm">{{link.icon}}</mat-icon>
-                <a matLine *ngIf="link['name'] != 'Logout'" [routerLink]="link.href" routerLinkActive="horizontal-active-link_account" [routerLinkActiveOptions]="{exact:true}">{{ link.name }}</a>
+                <a matLine *ngIf="link['name'] != 'Logout'" [routerLink]="link.href"
+                    routerLinkActive="horizontal-active-link_account" [routerLinkActiveOptions]="{exact:true}">{{
+                    link.name }}</a>
 
-                <a matLine *ngIf="link['name'] == 'Logout'" routerLinkActive="horizontal-active-link_account" [routerLinkActiveOptions]="{exact:true}">{{ link.name }}</a>
+                <a matLine *ngIf="link['name'] == 'Logout'" routerLinkActive="horizontal-active-link_account"
+                    [routerLinkActiveOptions]="{exact:true}">{{ link.name }}</a>
             </mat-list-item>
         </mat-nav-list>
     </mat-sidenav>
