--- a/store/src/default/pages/account/my-address/my-address.component.html
+++ b/store/src/default/pages/account/my-address/my-address.component.html
@@ -1,32 +1,32 @@
 <div fxLayout="row wrap">
   <div fxFlex="100" fxFlex.gt-sm="50" class="p-2">
     <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-    <h6>
-      <mat-icon> location_on</mat-icon>Home
-      <button mat-button>Edit</button>
-      <button mat-button>Delete</button>
-    </h6>
-    <select matNativeControl>
-      <option value="">Select</option>
-    </select>
-  </div>
+      <h6>
+        <mat-icon> location_on</mat-icon>Home
+        <button mat-button>Edit</button>
+        <button mat-button>Delete</button>
+      </h6>
+      <select matNativeControl>
+        <option value="">Select</option>
+      </select>
+    </div>
 
-  <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-    <h6>
-      <mat-icon> location_on</mat-icon>Parkway House
-      <button mat-button>Edit</button>
-      <button mat-button>Delete</button>
-    </h6>
-    <select matNativeControl>
-      <option value="">Select</option>
-    </select>
+    <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+      <h6>
+        <mat-icon> location_on</mat-icon>Parkway House
+        <button mat-button>Edit</button>
+        <button mat-button>Delete</button>
+      </h6>
+      <select matNativeControl>
+        <option value="">Select</option>
+      </select>
 
-  </div>
+    </div>
 
-  <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-    <button mat-button color="warn">Add New address</button>
+    <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+      <button mat-button color="warn" routerLink="/account/new-address">Add New address</button>
+    </div>
   </div>
-</div>
 </div>
 
 
