--- a/store/src/default/pages/account/my-profile/my-profile.component.html
+++ b/store/src/default/pages/account/my-profile/my-profile.component.html
@@ -9,14 +9,14 @@
       <span class="editProfile" *ngIf="(ifImageAvailable)" (click)="uploadButtonClick()">Change</span>
     </div>
 
-    <form [formGroup]="infoForm">
+    <form [formGroup]="profileForm">
       <mat-form-field class="w-100 mt-2"
-        [ngClass]="{'validationcolor':((infoForm.controls.firstName.errors?.required)&&(ifSubmitted==true))}">
-        <input matInput placeholder="Username" formControlName="firstName" required>
-        <mat-error *ngIf="((infoForm['controls'].firstName.errors?.required)&&(ifSubmitted==true))">
+        [ngClass]="{'validationcolor':((profileForm.controls.firstName.errors?.required)&&(ifSubmitted==true))}">
+        <input matInput placeholder="Username" formControlName="email" required readonly>
+        <mat-error *ngIf="((profileForm['controls'].firstName.errors?.required)&&(ifSubmitted==true))">
           First Name is required
         </mat-error>
-        <mat-error *ngIf="((infoForm['controls'].firstName.hasError('minlength'))&&(ifSubmitted==true))">
+        <mat-error *ngIf="((profileForm['controls'].firstName.hasError('minlength'))&&(ifSubmitted==true))">
           First Name isn't long enough, minimum of 3 characters
         </mat-error>
       </mat-form-field>
@@ -37,13 +37,13 @@
       <mat-form-field class="w-100 mt-2">
         <mat-label>I am</mat-label>
         <select matNativeControl formControlName="iam">
-          <option value="male">Customer</option>
-          <option value="female">Vender</option>
+          <option value="customer">Customer</option>
+          <option value="vender">Vender</option>
         </select>
       </mat-form-field>
 
       <div class="text-center mt-2">
-        <button mat-raised-button color="primary" (click)="onInfoFormSubmit()">Submit
+        <button mat-raised-button color="primary" (click)="onProfileFormSubmit()">Submit
         </button>
       </div>
     </form>
