--- a/store/src/default/pages/wishlist/wishlist.component.html
+++ b/store/src/default/pages/wishlist/wishlist.component.html
@@ -2,7 +2,7 @@
     <mat-chip color="warn" style="width: 25%;" selected="true">YOU HAVE NO ITEM IN WISH LIST</mat-chip>
 </mat-chip-list>
 
-<mat-sidenav-container class="productsWrap trending-products">
+<mat-sidenav-container class="productsWrap trending-products wishlist-page">
     <mat-sidenav-content class="all-products" ngClass.gt-sm="p-left">
       <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center"
         class="filter-row mat-elevation-z1 text-muted">
@@ -26,13 +26,13 @@
                 </div>
             </div>
         </div> -->
-            <div class="site-container">
+            <div class="site-container ">
                 <div class="advertisement-heading">
                   <h4 class="titleWithIcon"><img src='/assets/images/back-arrow.png'>My Wishlist</h4>
                 </div>
                 <div *ngIf="viewType == 'grid'" fxLayout="row wrap" class="products-wrapper w-100">
                     <div *ngFor="let product of wishlistSandbox.wishlist$ | async" fxFlex="100" [fxFlex.gt-sm]="viewCol"
-                        fxFlex.sm="50" class="col">
+                        fxFlex.sm="50" class="col wishListCol">
 
                         <mat-card class="product-item text-center card-hover productCol">
                         <button class="wishIcon" mat-icon-button
