admin changes mail and change mail temlate

--- a/api/views/emailTemplate.ejs
+++ b/api/views/emailTemplate.ejs
@@ -139,9 +139,7 @@
 					<br>
                 <tr>
                   <td style="border-radius:3px;background:#2856b6;text-align:center" class="m_-2195465710535294947m_-2105386732584480426button-td">
-                    <a href="http://piccocart.com/" style="background:#07582a;border:15px solid #07582a;padding:0 10px;color:#ffffff;font-family:sans-serif;font-size:14px;line-height:1.5;text-align:center;text-decoration:none;display:block;border-radius:3px;font-weight:bold" class="m_-2195465710535294947m_-2105386732584480426button-a" rel="noopener" target="_blank" data-saferedirecturl="">
-                      KEEP BROWSING
-                    </a>
+                     
                   </td>
                 </tr>
                 </tbody>
@@ -170,7 +168,7 @@
 											</tr>
 											<tr>
 											<td style="padding:0 0px;color:#000;text-align:left;padding-top:0px;font-family: 'Roboto', sans-serif;">
-												<h4 style="font-size: 16px;color:#000;font-weight: 300;margin:0;">The Spurtcommerce Team</h4>
+												<h4 style="font-size: 16px;color:#000;font-weight: 300;margin:0;">The Beaver Team</h4>
 											</td>
 										</tr>
 									</tbody></table>
