--- a/admin/src/theme/default/admin/layout/common/common.component.html
+++ b/admin/src/theme/default/admin/layout/common/common.component.html
@@ -14,7 +14,7 @@
                 <a class="navbar-brand" [routerLink]="['/dashboard']">
                     <!-- Logo icon -->
                     <b class="logo-icon">
-            <img src="assets/img/logo_v3_old.png" style="width: 170px;" alt="homepage" class="light-logo" />
+            <img src="assets/img/logo_v3.png" style="width: 30px;" alt="homepage" class="light-logo" />
           </b>
                 </a>
                 <!-- ============================================================== -->
@@ -68,8 +68,8 @@
         <footer class="footer text-center">
             <div class="footer-wrap">
                 <div class="footer-left">
-                    <h3> Spurtcommerce </h3>
-                    <p> Copyrights &copy; 2022, Piccosoft. All Rights Reserved. </p>
+                    <h3> Beaver </h3>
+                    <p> Copyrights &copy; 2022 Beaver. </p>
                 </div>
                 <div class="footer-right">
                     V.3.0.2
