--- a/store/src/default/pages/account/information/information.component.html
+++ b/store/src/default/pages/account/information/information.component.html
@@ -3,16 +3,17 @@
 
         <form [formGroup]="infoForm">
             <mat-form-field class="w-100 mt-2">
-                <input matInput placeholder="Contact Number" formControlName="phoneNumber">
+                <input matInput placeholder="Contact Number" formControlName="mobileNumber">
             </mat-form-field>
-            <mat-checkbox class="example-margin" formControlName="checkPhoneNumber">Check this to recieve order
+            
+            <mat-checkbox class="example-margin" formControlName="orderNotificationFirst">Check this to recieve order
                 notification and deals via SMS</mat-checkbox>
 
             <mat-form-field class="w-100 mt-2">
                 <input matInput placeholder="Primary Email Address" formControlName="primaryAddess">
             </mat-form-field>
 
-            <mat-checkbox class="example-margin" formControlName="checkPrimaryAddess">Check this to recieve order
+            <mat-checkbox class="example-margin" formControlName="orderNotificationsecond">Check this to recieve order
                 notification and deals via SMS</mat-checkbox>
 
             <mat-form-field class="w-100 mt-2">
@@ -25,7 +26,7 @@
 
             <mat-form-field class="w-100 mt-2">
                 <mat-label>Birthday</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="dob">
+                <input matInput [matDatepicker]="picker" formControlName="birthday">
                 <mat-datepicker-toggle matSuffix [for]="picker">
                     <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
                 </mat-datepicker-toggle>
