--- a/store/src/default/shared/components/account-buttons/account-buttons.component.html
+++ b/store/src/default/shared/components/account-buttons/account-buttons.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row wrap">
-  <div fxFlex="100" fxFlex.gt-sm="50" class="p-2">
+  <div fxFlex="100" fxFlex.gt-sm="100" class="formActions">
     <div class="text-center mt-2">
       <div class="text-center mt-1">
         <button mat-button color="primary" class="createAccountBtn actionBtn" routerLink="/account/profile">Public
