--- a/store/src/default/pages/account/information/information.component.html
+++ b/store/src/default/pages/account/information/information.component.html
@@ -1,58 +1,60 @@
-<div fxLayout="row wrap">
-    <div fxFlex="100" fxFlex.gt-sm="50" class="p-2">
-        <!-- <h2 class="text-muted text-center">Account Details</h2> -->
+<div class="accountWrap">
+    <div fxLayout="row wrap">
+        <div fxFlex="100" fxFlex.gt-sm="100" class="">
+            <!-- <h2 class="text-muted text-center">Account Details</h2> -->
 
-        <form [formGroup]="infoForm">
-            <mat-form-field class="w-100 mt-2">
-                <input matInput placeholder="Contact Number" formControlName="phoneNumber">
-            </mat-form-field>
+            <form [formGroup]="infoForm">
+                <mat-form-field class="w-100 mt-2">
+                    <input matInput placeholder="Contact Number" formControlName="phoneNumber">
+                </mat-form-field>
 
-            <mat-radio-group aria-label="Select an option" formControlName="checkPhoneNumber">
-                <mat-radio-button value="1">Check this to recieve order notification and deals via SMS
-                </mat-radio-button>
-            </mat-radio-group>
+                <mat-radio-group aria-label="Select an option" formControlName="checkPhoneNumber">
+                    <mat-radio-button value="1">Check this to recieve order notification and deals via SMS
+                    </mat-radio-button>
+                </mat-radio-group>
 
-            <mat-form-field class="w-100 mt-2">
-                <input matInput placeholder="Primary Email Address" formControlName="primaryAddess">
-            </mat-form-field>
+                <mat-form-field class="w-100 mt-2">
+                    <input matInput placeholder="Primary Email Address" formControlName="primaryAddess">
+                </mat-form-field>
 
-            <mat-radio-group aria-label="Select an option" formControlName="checkPrimaryAddess">
-                <mat-radio-button value="1">Check this to recieve order notification and deals via SMS
-                </mat-radio-button>
-            </mat-radio-group>
+                <mat-radio-group aria-label="Select an option" formControlName="checkPrimaryAddess">
+                    <mat-radio-button value="1">Check this to recieve order notification and deals via SMS
+                    </mat-radio-button>
+                </mat-radio-group>
 
-            <mat-form-field class="w-100 mt-2">
-                <input matInput placeholder="Recovery Email Address" formControlName="recoveryEmail">
-            </mat-form-field>
+                <mat-form-field class="w-100 mt-2">
+                    <input matInput placeholder="Recovery Email Address" formControlName="recoveryEmail">
+                </mat-form-field>
 
-            <mat-form-field class="w-100 mt-2">
-                <input matInput placeholder="Bio" formControlName="bio">
-            </mat-form-field>
+                <mat-form-field class="w-100 mt-2">
+                    <input matInput placeholder="Bio" formControlName="bio">
+                </mat-form-field>
 
-            <mat-form-field class="w-100 mt-2">
-                <mat-label>Birthday</mat-label>
-                <input matInput [matDatepicker]="picker" formControlName="dob">
-                <mat-datepicker-toggle matSuffix [for]="picker">
-                    <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-                </mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
+                <mat-form-field class="w-100 mt-2">
+                    <mat-label>Birthday</mat-label>
+                    <input matInput [matDatepicker]="picker" formControlName="dob">
+                    <mat-datepicker-toggle matSuffix [for]="picker">
+                        <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+                    </mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
 
-            <mat-form-field class="w-100 mt-2">
-                <mat-label>Gender</mat-label>
-                <select matNativeControl formControlName="gender">
-                    <option value="male">male</option>
-                    <option value="female">Female</option>
-                </select>
-            </mat-form-field>
+                <mat-form-field class="w-100 mt-2">
+                    <mat-label>Gender</mat-label>
+                    <select matNativeControl formControlName="gender">
+                        <option value="male">male</option>
+                        <option value="female">Female</option>
+                    </select>
+                </mat-form-field>
 
-            <div class="text-center mt-2">
-                <button mat-raised-button color="primary" (click)="onInfoFormSubmit()">Submit
-                </button>
-            </div>
-        </form>
+                <div class="text-center mt-2">
+                    <button mat-raised-button color="primary" (click)="onInfoFormSubmit()">Submit
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
+
+
+    <app-account-buttons></app-account-buttons>
 </div>
-
-
-<app-account-buttons></app-account-buttons>
