--- a/store/src/default/pages/account/new-address/new-address.component.html
+++ b/store/src/default/pages/account/new-address/new-address.component.html
@@ -25,10 +25,15 @@
           <input matInput placeholder="Country">
         </mat-form-field>
 
-        <mat-radio-group aria-label="Select an option">
+        <mat-checkbox class="example-margin">Save new shipping address</mat-checkbox>
+        <!-- <mat-radio-group aria-label="Select an option">
           <mat-radio-button value="1">Save new shipping address
           </mat-radio-button>
-        </mat-radio-group>
+        </mat-radio-group> -->
+        <div class="text-center mt-2">
+          <button mat-raised-button color="info">Submit
+          </button>
+      </div>
       </form>
     </div>
   </div>
