--- a/store/src/default/shared/components/top-menu/top-menu.component.html
+++ b/store/src/default/shared/components/top-menu/top-menu.component.html
@@ -137,7 +137,7 @@
             <a mat-menu-item routerLink="/help">
                 <span>Need Help</span>
             </a>
-            <a mat-menu-item routerLink="/account/become-seller">
+            <a mat-menu-item routerLink="/become-seller">
                 <span>Become a Seller</span>
             </a>
 
