--- a/store/src/default/pages/Authentication/sign-in/sign-in.component.html
+++ b/store/src/default/pages/Authentication/sign-in/sign-in.component.html
@@ -4,7 +4,7 @@
     <h4><span>or continue with</span></h4>
     <div class="text-center mt-3 formIcons">
         <mat-icon>facebook</mat-icon>
-        <mat-icon><img src="../../../../assets/images/google.png" alt=""></mat-icon> 
+        <mat-icon><img src="../../../../assets/images/google.png" alt=""></mat-icon>
     </div>
 
     <h2 class="signInTitle">Sign In</h2>
@@ -22,18 +22,18 @@
                 </mat-error>
             </mat-form-field>
         </div>
-        <div class="formField fieldWithIcon emailIcon">
-        <mat-form-field class="w-100 mt-1" [ngClass]="{'validationcolor':
+        <div class="formField fieldWithIcon lockIcon">
+            <mat-form-field class="w-100 mt-1" [ngClass]="{'validationcolor':
     (loginForm.controls.password.hasError('required') && submitted)}">
-            <input matInput placeholder="Password" formControlName="password" type="password">
-            <mat-error *ngIf="loginForm.controls['password'].hasError('required') && submitted">
-                Password is required
-            </mat-error>
-            <mat-error *ngIf="loginForm.controls['password'].hasError('minlength') && submitted">
-                Password isn't long enough, minimum of 5 characters
-            </mat-error>
-        </mat-form-field>
-    </div>
+                <input matInput placeholder="Password" formControlName="password" type="password">
+                <mat-error *ngIf="loginForm.controls['password'].hasError('required') && submitted">
+                    Password is required
+                </mat-error>
+                <mat-error *ngIf="loginForm.controls['password'].hasError('minlength') && submitted">
+                    Password isn't long enough, minimum of 5 characters
+                </mat-error>
+            </mat-form-field>
+        </div>
 
         <div class="text-center mt-2">
             <mat-checkbox class="example-margin">Remember me!</mat-checkbox>
@@ -58,17 +58,15 @@
             <button mat-button color="primary" class="createAccountBtn actionBtn">Create A New Accout</button>
         </div>
 
-
         <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-            <h5 class="text-center text-red auth w-100">
-                Become a seller</h5>
+            <h5 class="text-red auth forgot w-100" routerLink="/auth/forgot">
+                Forgot Password?</h5>
         </div>
 
-
-        <!-- <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
-            <h5 class="text-muted auth forgot" routerLink="/auth/forgot">
-                Forgot Password?</h5>
-        </div> -->
+        <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-1">
+            <h5 class="text-red auth w-100 forgot" routerLink="/become-seller">
+                Become a seller</h5>
+        </div>
 
     </form>
 </div>
