--- a/store/src/default/pages/account/account.component.html
+++ b/store/src/default/pages/account/account.component.html
@@ -21,7 +21,7 @@
             <!-- <img src="/assets/images/back-arrow.png"> -->
             <h2>{{pageInfo}}</h2>
         </div>
-        <div class="account-wrapper mat-elevation-z1">
+        <div class="accnount-wrapper mat-elevation-z1">
             <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
