--- a/store/src/default/pages/account/information/information.component.html
+++ b/store/src/default/pages/account/information/information.component.html
@@ -53,4 +53,28 @@
 
 
     <app-account-buttons></app-account-buttons>
+
+    <!-- <div fxFlex="100" fxFlex.gt-sm="50" class="p-2" ngClass.sm="mt-2" ngClass.xs="mt-2">
+        <h2 class="text-muted text-center">Change Password</h2>
+        <form [formGroup]="passwordForm" (ngSubmit)="onPasswordFormSubmit()">
+            <mat-form-field class="w-100 mt-2" [ngClass]="{'validationcolor':
+            ((passwordForm.controls.currentPassword.errors?.required)&&(ifPasswordForm==true))}">
+                <input matInput placeholder="Current Password" formControlName="currentPassword" type="password">
+                <mat-error *ngIf="((passwordForm.controls['currentPassword'].errors?.required)&&(ifPasswordForm==true))">
+                    Current Password is required </mat-error>
+            </mat-form-field>
+            <mat-form-field class="w-100 mt-1" [ngClass]="{'validationcolor':
+            ((passwordForm.controls.newPassword.errors?.required)&&(ifPasswordForm==true))}">
+                <input matInput placeholder="New Password" formControlName="newPassword" type="password">
+                <mat-error *ngIf="((passwordForm.controls['newPassword'].errors?.required)&&(ifPasswordForm==true))">
+                    New Password is required </mat-error>
+                <mat-error *ngIf="((passwordForm.controls['newPassword'].hasError('minlength'))&&(ifPasswordForm==true))">
+                    New Password isn't long enough, minimum of 5 characters
+                </mat-error>
+            </mat-form-field>
+            <div class="text-center mt-2">
+                <button mat-raised-button color="primary" type="submit">Change</button>
+            </div>
+        </form>
+    </div> -->
 </div>
